compiler/tests/language/negative/oopSurfaceRoleCapability/module/reExportPrivateType.qn
module app.badFacade

import http.core.privateModel.{PrivateRouteCarrier}

export {
  PrivateRouteCarrier
}
